Tue Nov 17 11:25:05 2015  Eric Turner  <ericturnerdev@gmail.com>

	* array.c (rb_ary_dig), hash.c (rb_hash_dig): [DOC] Update
	  comments describing dig methods.  [Fix GH-1103]

	* struct.c (rb_struct_dig): [DOC] add rdoc.

Tue Nov 17 11:22:22 2015  Martin Duerst  <duerst@it.aoyama.ac.jp>
	* NEWS: Small grammatical fix [ci skip]

Tue Nov 17 10:12:30 2015  Eric Wong  <e@80x24.org>

	* ext/socket/lib/socket.rb (Socket.accept_loop): avoid exceptions
	  (Socket.udp_server_recv): ditto

Tue Nov 17 09:59:00 2015  Eric Wong  <e@80x24.org>

	* ext/socket/ancdata.c (bsock_sendmsg_internal): avoid arg parsing
	  [ruby-core:71439] [Feature #11339]
	  (rsock_bsock_sendmsg): make private, adjust for above
	  (rsock_bsock_sendmsg_nonblock): ditto
	* ext/socket/rubysocket.h: adjust prototypes
	  (rsock_opt_false_p): remove
	* ext/socket/basicsocket.c (rsock_init_basicsocket):
	  define private methods
	* ext/socket/lib/socket.rb (BasicSocket#sendmsg): new wrapper
	  (BasicSocket#sendmsg_nonblock): ditto

Tue Nov 17 09:45:18 2015  Eric Wong  <e@80x24.org>

	* ext/socket/ancdata.c (bsock_recvmsg_internal): avoid arg parsing
	  (rsock_bsock_recvmsg): adjust for above change
	  (rsock_bsock_recvmsg_nonblock): ditto
	  [ruby-core:71439] [Feature #11339]
	* ext/socket/rubysocket.h: adjust prototypes for above
	* ext/socket/basicsocket.c (rsock_init_basicsocket):
	  adjust private methods
	* ext/socket/lib/socket.rb (BasicSocket#recvmsg): wrapper method
	  (BasicSocket#recvmsg_nonblock): ditto

Tue Nov 17 08:36:34 2015  Eric Wong  <e@80x24.org>

	* ext/socket/init.c (rsock_s_accept_nonblock): avoid parsing args
	  [ruby-core:71439] [Feature #11339]
	* ext/socket/rubysocket.h: adjust prototype
	* ext/socket/socket.c (sock_accept_nonblock): make private
	* ext/socket/tcpserver.c (tcp_accept_nonblock): ditto
	* ext/socket/unixserver.c (unix_accept_nonblock): ditto
	* ext/socket/lib/socket.rb (Socket#accept_nonblock):
	  implement as wrapper, move RDoc
	  (TCPServer#accept_nonblock): ditto